--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --gray: #CCCCCC;
+    --gray: #e9e7df;
   }
 
 footer{
@@ -7,14 +7,48 @@ footer{
   position: relative;
   bottom: 0;
   font-size: 10px;
-  margin-top: 12%;
+  margin-top: 5%;
   padding-bottom: 0%;
+}
+
+.nav{
+  display: inline;
+}
+
+.logo-mark{
+  width: 43%;
+  position: relative;
+  left: 26%;
+  animation: logo 2.5s infinite forwards;
+}
+
+.logo-mark img{
+  max-width: 100%;
+}
+
+@keyframes logo {
+  0% {transform: rotateY(0deg);}
+  25% {transform: rotateY(180deg);}
+  100% {transform: rotateY(0deg);}
+}
+
+
+.nav a{
+  color: black;
+  margin-left: 2%;
+  font-size: 18px;
+  position: relative;
+  top: -40px;
+  right: -67%;
+}
+.nav a:hover{
+  color: var(--gray);
 }
 
 body{
   font-family: adobe-caslon-pro, serif;
-  margin-left: 2%;
-  margin-right: 2%;
+  width: 100vw;
+  height: auto;
   overflow-x: hidden;
 }
 a{
@@ -38,6 +72,7 @@ a:hover{
 }
 .header{
   font-size: 25px;
+  margin-left: 2%;
 }
 .dropbtn:hover{
   color: var(--gray);
@@ -47,6 +82,7 @@ a:hover{
   position: relative;
   display: inline-block;
   width: 100vw;
+  margin-top: 2%;
 }
 .dropdown-content {
   display: none;
@@ -89,10 +125,13 @@ a:hover{
   top: 5rem;
   transition: 0.2s;
 }
-.card-trip:hover{
- width: 20.2%;
- color: var(--gray);
+.card-trip:hover img{
+  opacity: 50%;
 } 
+.card-trip:hover{
+  color: var(--gray);
+}
+
 .card-trip img{
   max-width: 100%;
 }
@@ -146,7 +185,7 @@ a:hover{
   top: -1%;
 }
 .date{
-  margin-bottom: -3%;
+  margin-bottom: -2%;
 }
 .title a{
   text-decoration: underline;
@@ -173,6 +212,15 @@ li{
 }
 
 /* Letter from Editor style */
+.letter img{
+  width: 100%;
+}
+.letter{
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .le-title{
   text-align: center;
   margin-top: 5%;
@@ -182,5 +230,97 @@ li{
   width: 40%;
   margin-left: auto;
   margin-right: auto;
+  text-align: justify;
   margin-top: 5%;
+}
+.subheader{
+  margin-top: 3%;
+}
+.in-content{
+  width: 50%;
+
+  margin-left: auto;
+  margin-right: auto;
+  text-align: justify;
+
+}
+
+
+/* interviews */
+.grid{
+  margin-top: 5%;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 5%;
+  margin-left: 3%;
+  text-align: justify;
+}
+
+.article-info p{
+  width: 90%;
+}
+
+.title-vv{
+  margin-left: 2.5%;
+  margin-bottom: -3%;
+  font-size: 25px;
+  text-align: center;
+}
+.subheader-vv{
+  margin-top: 3%;
+  margin-left: 3%;
+  text-align: center;
+}
+
+.vv-title{
+  width: 65%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.vv-title img{
+  width: 100%;
+}
+.footer_gap{
+  height: 100px;
+}
+
+/* articles */
+.writing{
+  background-color: var(--gray);
+  opacity: 100%;
+  position: relative;
+  left: -10%;
+  padding: 10%;
+}
+.content{
+  width: 100%;
+}
+
+
+/* interview pages */
+.int-intro{
+  display: grid;
+  grid-template-columns: 30% 70%;
+  height: auto;
+}
+.portrait img{
+  width: 80%;
+  margin-left: 4%;
+}
+.int-details{
+  width: 90%;
+}
+.interview-text{
+  position: relative;
+  margin-left: 3%;
+  display: grid;
+  height: auto;
+  grid-template-columns: 1fr 1fr;
+}
+.int-para{
+  margin-top: 5%;
+  width: 80%
+}
+.name-int{
+  margin-right: 4%;
 }
