--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ a:hover{
 .card-trip {
   overflow: hidden;
   position: relative; 
-  width: 20%;
+  width: 25%;
   height: auto;
   margin-bottom: 2%;
   top: 5rem;
@@ -335,4 +335,9 @@ li{
 .para-text {
   text-indent: 0;
   padding-left: 1em; /* spacing between initial and paragraph */
+}
+.issue-imgs img{
+  width: 30%;
+  position: relative;
+  left: 35%;
 }
